Update yaml for symfony 2.8 compatibility

--- a/configuration/config.global.yml
+++ b/configuration/config.global.yml
@@ -44,10 +44,10 @@ parameters:
 
     doctrine.connection:
         driver: pdo_mysql
-        host: %database.server%
-        user: %database.username%
-        password: %database.password%
-        dbname: %database.database%
+        host: '%database.server%'
+        user: '%database.username%'
+        password: '%database.password%'
+        dbname: '%database.database%'
 
     ############################################################################
     # caching
