--- a/configuration/di/controllers.api.crud.yml
+++ b/configuration/di/controllers.api.crud.yml
@@ -4,10 +4,10 @@ services:
     api.build.start:
         class: 'QL\Hal\Controllers\Api\Build\StartBuildController'
         arguments:
-            - @response.formatter
-            - @build.start.validator
-            - @doctrine.em
-            - @redis
-            - @hal.application
-            - @currentUser
-            - @request.body
+            - '@response.formatter'
+            - '@build.start.validator'
+            - '@doctrine.em'
+            - '@redis'
+            - '@hal.application'
+            - '@currentUser'
+            - '@request.body'
