--- a/configuration/routes.yml
+++ b/configuration/routes.yml
@@ -11,4 +11,6 @@ parameters:
     routes.regex.guid: '[0-9a-zA-Z]{32,32}'
 
     routes.regex.buildId: '[A-Za-z0-9\_\-\.]+'
-    routes.regex.pushId: %routes.regex.buildId%
+    routes.regex.pushId: '%routes.regex.buildId%'
+
+    routes.regex.date: '[0-9]{4}-[0-9]{2}-[0-9]{2}'
