--- a/configuration/routes/routes.api.yml
+++ b/configuration/routes/routes.api.yml
@@ -4,7 +4,7 @@ parameters:
     routes.api.regex.githubname: '[A-Za-z0-9\.\-]+'
 
     routes.api.regex.buildId: '[A-Za-z0-9\_\-\.]+'
-    routes.api.regex.pushId: %routes.api.regex.buildId%
+    routes.api.regex.pushId: '%routes.api.regex.buildId%'
     routes.api.regex.queue.refresh: '[A-Za-z0-9\+\-\.]+'
 
     routes.api:
@@ -53,7 +53,7 @@ parameters:
             method: 'GET'
             route: '/api/environments/:id'
             stack: ['middleware.api.cached', 'api.environment']
-            conditions: {id: %routes.api.regex.digit%}
+            conditions: {id: '%routes.api.regex.digit%'}
 
         api.servers:
             method: 'GET'
@@ -63,13 +63,13 @@ parameters:
             method: 'GET'
             route: '/api/servers/page/:page'
             stack: ['middleware.api.cached', 'api.servers']
-            conditions: {page: %routes.api.regex.digit%}
+            conditions: {page: '%routes.api.regex.digit%'}
 
         api.server:
             method: 'GET'
             route: '/api/servers/:id'
             stack: ['middleware.api.cached', 'api.server']
-            conditions: {id: %routes.api.regex.digit%}
+            conditions: {id: '%routes.api.regex.digit%'}
 
         api.groups:
             method: 'GET'
@@ -80,7 +80,7 @@ parameters:
             method: 'GET'
             route: '/api/groups/:id'
             stack: ['middleware.api.cached', 'api.group']
-            conditions: {id: %routes.api.regex.digit%}
+            conditions: {id: '%routes.api.regex.digit%'}
 
         api.users:
             method: 'GET'
@@ -90,69 +90,69 @@ parameters:
             method: 'GET'
             route: '/api/users/page/:page'
             stack: ['middleware.api.cached', 'api.users']
-            conditions: {page: %routes.api.regex.digit%}
+            conditions: {page: '%routes.api.regex.digit%'}
 
         api.user:
             method: 'GET'
             route: '/api/users/:id'
             stack: ['middleware.api.cached', 'api.user']
-            conditions: {id: %routes.api.regex.digit%}
+            conditions: {id: '%routes.api.regex.digit%'}
 
         api.deployment:
             method: 'GET'
             route: '/api/deployment/:id'
             stack: ['middleware.api.cached', 'api.deployment']
-            conditions: {id: %routes.api.regex.digit%}
+            conditions: {id: '%routes.api.regex.digit%'}
 
         # @todo change this url because it is terrible
         api.deployment.lastpush:
             method: 'GET'
             route: '/api/deployment/:id/last-push'
             stack: ['middleware.api.cached', 'api.deployment.lastpush']
-            conditions: {id: %routes.api.regex.digit%}
+            conditions: {id: '%routes.api.regex.digit%'}
 
         api.deployment.history:
             method: 'GET'
             route: '/api/deployment/:id/pushes'
             stack: ['middleware.api.cached', 'api.deployment.history']
-            conditions: {id: %routes.api.regex.digit%}
+            conditions: {id: '%routes.api.regex.digit%'}
         api.deployment.history.paged:
             method: 'GET'
             route: '/api/deployment/:id/pushes/page/:page'
             stack: ['middleware.api.cached', 'api.deployment.history']
             conditions:
-                id: %routes.api.regex.digit%
-                page: %routes.api.regex.digit%
+                id: '%routes.api.regex.digit%'
+                page: '%routes.api.regex.digit%'
 
         api.build:
             method: 'GET'
             route: '/api/builds/:id'
             stack: ['middleware.api.cached', 'api.build']
-            conditions: {id: %routes.api.regex.buildId%}
+            conditions: {id: '%routes.api.regex.buildId%'}
 
         api.build.logs:
             method: 'GET'
             route: '/api/builds/:id/logs'
             stack: ['middleware.api.cached', 'api.build.logs']
-            conditions: {id: %routes.api.regex.buildId%}
+            conditions: {id: '%routes.api.regex.buildId%'}
 
         api.push:
             method: 'GET'
             route: '/api/pushes/:id'
             stack: ['middleware.api.cached', 'api.push']
-            conditions: {id: %routes.api.regex.pushId%}
+            conditions: {id: '%routes.api.regex.pushId%'}
 
         api.push.logs:
             method: 'GET'
             route: '/api/pushes/:id/logs'
             stack: ['middleware.api.cached', 'api.push.logs']
-            conditions: {id: %routes.api.regex.pushId%}
+            conditions: {id: '%routes.api.regex.pushId%'}
 
         api.event.log:
             method: 'GET'
             route: '/api/eventlogs/:id'
             stack: ['middleware.api.cached', 'api.event.log']
-            conditions: {id: %routes.api.regex.alphanum%}
+            conditions: {id: '%routes.api.regex.alphanum%'}
 
         api.applications:
             method: 'GET'
@@ -163,39 +163,39 @@ parameters:
             method: 'GET'
             route: '/api/applications/:id'
             stack: ['middleware.api.cached', 'api.application']
-            conditions: {id: %routes.api.regex.digit%}
+            conditions: {id: '%routes.api.regex.digit%'}
 
         api.deployments:
             method: 'GET'
             route: '/api/applications/:id/deployments'
             stack: ['middleware.api.cached', 'api.deployments']
-            conditions: {id: %routes.api.regex.digit%}
+            conditions: {id: '%routes.api.regex.digit%'}
 
         api.builds:
             method: 'GET'
             route: '/api/applications/:id/builds'
             stack: ['middleware.api.cached', 'api.builds']
-            conditions: {id: %routes.api.regex.digit%}
+            conditions: {id: '%routes.api.regex.digit%'}
         api.builds.history:
             method: 'GET'
             route: '/api/applications/:id/builds/page/:page'
             stack: ['middleware.api.cached', 'api.builds']
             conditions:
-                id: %routes.api.regex.digit%
-                page: %routes.api.regex.digit%
+                id: '%routes.api.regex.digit%'
+                page: '%routes.api.regex.digit%'
 
         api.pushes:
             method: 'GET'
             route: '/api/applications/:id/pushes'
             stack: ['middleware.api.cached', 'api.pushes']
-            conditions: {id: %routes.api.regex.digit%}
+            conditions: {id: '%routes.api.regex.digit%'}
         api.pushes.history:
             method: 'GET'
             route: '/api/applications/:id/pushes/page/:page'
             stack: ['middleware.api.cached', 'api.pushes']
             conditions:
-                id: %routes.api.regex.digit%
-                page: %routes.api.regex.digit%
+                id: '%routes.api.regex.digit%'
+                page: '%routes.api.regex.digit%'
 
         api.queue:
             method: 'GET'
@@ -206,4 +206,4 @@ parameters:
             method: 'GET'
             route: '/api/queue-refresh/:jobs'
             stack: ['middleware.api.cached', 'api.queue.refresh']
-            conditions: {jobs: %routes.api.regex.queue.refresh%}
+            conditions: {jobs: '%routes.api.regex.queue.refresh%'}
